# ChannelBot

./: background.py  main.py  pyproject.toml  requirements.txt
Repository/: ChatGPT.py  Prompter.py  TgBot.py  ThemeScraper.py  Timer.py
