[tool.poetry]
name = "repl_nix_ChannelBot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
telebot = "^0.0.5"
bs4 = "^0.0.1"
Flask = "^2.2.3"
googletrans = "^3.0.0"
openai = "^0.27.2"
python-dotenv = "^1.0.0"
pytz = "^2022.7.1"
requests = "^2.28.2"
lxml = "4.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
